# libndtypes

./: .appveyor.yml  .appveyor_conda.yml  .gitignore  .travis.yml  INSTALL.txt  LICENSE.txt  MANIFEST.in  Makefile  Makefile.in  Makefile.vc  README.rst  README.txt  TravisExplainsPluribus.txt  alloc.c  appveyor.yml  attr.c  attr.h  config.h.in  configure  configure.ac  display.c  display_meta.c  equal.c  grammar.c  grammar.h  grammar.y  indent.c  lexer.c  lexer.h  lexer.l  map.c  match.c  ndtypes.c  ndtypes.h  parsefuncs.c  parsefuncs.h  parser.c  seq.c  seq.h  setup.py  (+2 more)
.conda/: meta.yaml  run_test.bat
.conda/libndtypes/: meta.yaml
.conda/ndtypes/: bld.bat  build.sh  meta.yaml
doc/: Makefile  conf.py  contents.rst  index.rst
doc/experimental/: array.txt  attr_revisited.txt  explicit-strides.txt  layout.txt  new-syntax.rst  xnd_ptr.c
doc/libndtypes/: conf.py  context.rst  encodings.rst  fields-values.rst  functions.rst  index.rst  init.rst  io.rst  memory.rst  predicates.rst  type-functions.rst  typedef.rst  types.rst  util.rst
doc/ndtypes/: buffer-protocol.rst  conf.py  index.rst  pattern-matching.rst  quickstart.rst  types.rst
doc/ndtypes-python/: index.rst
doc/releases/: index.rst  v0.2.0b1.rst  v0.2.0b2.rst
doc/src/: ast.rst  changelog.rst  conf.py  datashape.rst  grammar.rst  index.rst  pattern-matching.rst
docs/: make.bat
docs/experimental/: array_repr.txt  layout.txt  packed.c  slice.py  syntax.rst  vararray.c  vararray.py  xnd_ptr.c
docs/src/: ast.rst  datashape.rst  grammar.rst
libndtypes/: Makefile  Makefile.in  Makefile.vc  alloc.c  attr.c  attr.h  context.c  copy.c  display.c  display_meta.c  encodings.c  equal.c  grammar.c  grammar.h  grammar.y  io.c  lexer.c  lexer.h  lexer.l  match.c  ndtypes.c  ndtypes.h  ndtypes.h.in  overflow.h  parsefuncs.c  parsefuncs.h  parser.c  primitive.c  seq.c  seq.h  slice.h  substitute.c  substitute.h  symtable.c  symtable.h  unify.c  util.c  values.c
libndtypes/compat/: Makefile.in  Makefile.vc  README.txt  bpgrammar.c  bpgrammar.h  bpgrammar.y  bplexer.c  bplexer.h  bplexer.l  export.c  import.c
libndtypes/serialize/: Makefile.in  Makefile.vc  deserialize.c  serialize.c
libndtypes/tests/: Makefile.in  Makefile.vc  alloc_fail.c  alloc_fail.h  runtest.c  test.h  test_array.c  test_buffer.c  test_indent.c  test_match.c  test_numba.c  test_parse.c  test_parse_error.c  test_parse_roundtrip.c  test_record.c  test_typecheck.c  test_typedef.c  test_unify.c  valgrind.supp
libndtypes/tools/: bench.c  indent.c  print_ast.c
python/: Makefile  _ndtypes.c  bench.py  ndt_randtype.py  ndt_support.py  ndtypes.c  ndtypes.py  randtype.py  setup.py  support.py  test_ndtypes.py
python/ndtypes/: __init__.py  _ndtypes.c  docstrings.h  pyndtypes.h
ruby/: CONTRIBUTING.md  README.md  Rakefile  ndtypes.gemspec  setup.rb
ruby/ext/ruby_ndtypes/: extconf.rb  gc_guard.c  gc_guard.h  ruby_ndtypes.c  ruby_ndtypes.h  ruby_ndtypes_internal.h
ruby/ext/ruby_ndtypes/include/: ndtypes.h
ruby/lib/: ndtypes.rb
ruby/lib/ndtypes/: errors.rb  version.rb
ruby/spec/: gc_table_spec.rb  ndtypes_spec.rb  spec_helper.rb
ruby/test/: test_helper.rb  test_ndtypes.rb
tests/: alloc_fail.c  alloc_fail.h  runtest.c  test.h  test_array.c  test_error_strings.c  test_indent.c  test_map_names.c  test_match.c  test_nominal.c  test_parse.c  test_parse_error.c  test_parse_roundtrip.c  test_record.c  test_roundtrip.c  test_strings.c  test_typecheck.c  test_typedef.c  valgrind.supp
tools/: bench.c  indent.c  print_ast.c
vcbuild/: INSTALL.txt  README.txt  runtest32.bat  runtest64.bat  vcbuild32.bat  vcbuild64.bat  vcclean.bat  vcdistclean.bat
